# d2_forever

./: .gitignore  Destiny2.slnx  README.md
src/Destiny2.CliTool/: main.py  pyproject.toml
src/Destiny2.CliTool/common/: __init__.py  paths_and_dirs.py
src/Destiny2.CliTool/enums/: __init__.py  languages.py  table_names.py
src/Destiny2.CliTool/utils/: __init__.py
src/Destiny2.Docs/: Class1.cs  index.md  package-lock.json  package.json
src/Destiny2.Docs/.vitepress/: config.mts
src/Destiny2.Docs/docs/: index.md  jwccp.md
src/Destiny2.Jwccp/: main.py  pyproject.toml
src/Destiny2.Jwccp/http_io/: __init__.py
src/Destiny2.Jwccp/models/: __init__.py
src/Destiny2.Manifest/: main.py  pyproject.toml
src/Destiny2.Manifest/assets/: manifest.json
src/Destiny2.Normalization/: main.py  pyproject.toml
src/Destiny2.Normalization/models/: __init__.py
