[project]
name = "destiny2-clitool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ijson>=3.5.1",
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "orjson>=3.11.9",
    "polars>=1.43.0",
    "pydantic>=2.13.4",
    "typer>=0.27.0",
]
